@@ -1,0 +1,15 @@
+<?xml version='1.0'?>
+<TestDescriptor>
+    <Name>Test XML code generator support for attribute groups</Name>
+    <Author>Werner Guttmann</Author>
+	<Comment>Basic test that ensures that the naming for attribute groups is consistent</Comment>
+	<Category>basic capability</Category>
+	<SourceGeneratorTest>
+		    <Schema>test.xsd</Schema>
+            <Root_Object random="false" dump="true">Element1</Root_Object>
+		    <UnitTestCase>
+                <Name>Test Generation</Name>
+                <Input>input.xml</Input>
+            </UnitTestCase>
+	</SourceGeneratorTest>
+</TestDescriptor>
